--- a/boedb/pyproject.toml
+++ b/boedb/pyproject.toml
@@ -1,10 +1,20 @@
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+
 [tool.pytest.ini_options]
 addopts = """
-  --cov
+  --cov=boedb --cov-report=html
 """
 
 [tool.coverage.run]
 source = ["boedb"]
+omit = [
+  "test*.py",
+  "tests/__init__.py"
+]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -15,8 +25,5 @@ exclude_lines = [
   "if __name__ == .__main__.:",
 ]
 
-[tool.black]
-line-length = 120
-
-[tool.isort]
-profile = "black"
+[tool.coverage.html]
+directory = "htmlcov"
