--- a/boedb/pyproject.toml
+++ b/boedb/pyproject.toml
@@ -23,6 +23,7 @@ exclude_lines = [
   "def __repr__",
   "def __str__",
   "raise NotImplementedError",
+  "logger", "logging",
   "if __name__ == .__main__.:",
 ]
 
