--- a/boedb/requirements.txt
+++ b/boedb/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.5
-aiohttp_retry==2.8.6
 python-dotenv==1.0.0
 psycopg[binary]==3.1.10
+psycopg[pool]==3.1.8
 xmltodict==0.13.0
 certifi>=2023.07.22
